<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/md_theme_background"
    android:padding="32dp">

    <ImageView
        android:id="@+id/imagenOnboarding"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:src="@android:drawable/ic_menu_agenda"
        android:contentDescription="@string/onb_imagen" />

    <TextView
        android:id="@+id/tituloOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/onb_bienvenida_titulo"
        android:textColor="@color/md_theme_on_surface"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descripcionOnboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/onb_bienvenida_desc"
        android:textColor="@color/md_theme_on_surface_variant"
        android:textSize="15sp" />

</LinearLayout>